--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
-<link rel="stylesheet" href="css/style.css">
-<script src="js/script.js"></script>
 
 <body>
 	<!--By Bifol Group-->
@@ -33,9 +32,9 @@
 								</div>
 								<div class="right-top__phone">
 									<div class="right-top__phone-line">
-										<a href="tel:88122456541"><svg version="1.1" id="Capa_1"
-												xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-												x="0px" y="0px" width="891.024px" height="891.024px" viewBox="0 0 891.024 891.024"
+										<a href="tel:2456541"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="891.024px"
+												height="891.024px" viewBox="0 0 891.024 891.024"
 												style="enable-background:new 0 0 891.024 891.024;" xml:space="preserve">
 												<path d="M2.8,180.875c46.6,134,144.7,286.2,282.9,424.399c138.2,138.2,290.4,236.301,424.4,282.9c18.2,6.3,38.3,1.8,52-11.8
 										l92.7-92.7l21.6-21.6c19.5-19.5,19.5-51.2,0-70.7l-143.5-143.4c-19.5-19.5-51.2-19.5-70.7,0l-38.899,38.9
@@ -43,7 +42,7 @@
 										l38.9-38.9c19.5-19.5,19.5-51.2,0-70.7l-143.5-143.5c-19.5-19.5-51.2-19.5-70.7,0l-21.6,21.6l-92.7,92.7
 										C1,142.575-3.5,162.675,2.8,180.875z" />
 											</svg>
-											<p>8 812 245 65 41</p>
+											<p>245 65 41</p>
 										</a>
 									</div>
 									<div class="right-top__phone-line">
@@ -124,21 +123,21 @@
 								</div>
 								<div class="left-bottom__block">
 									<div class="bottom__block-image">
-										<a href="#"><img src="img/akredit.jpg"></a>
-										<a href="#"><img src="img/attestat.jpg"></a>
+										<img loading="lazy" src="img/akredit.jpg">
+										<img loading="lazy" src="img/attestat.jpg">
 									</div>
 									<div class="bottom__block-text">
-										Мы оказываем свои услуги полностью официально, имея <a href="#"
-											class="block-text__link">государственную аккредитацию</a> и
-										<a href="#" class="block-text__link">документы на осуществление своей деятельности</a> на
+										Мы оказываем свои услуги полностью официально, имея
+										государственную аккредитацию и
+										документы на осуществление своей деятельности на
 										территории Санкт-Петербурга.
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="about__right">
-							<img src="img/right1.png">
-							<img src="img/right2.jpg">
+							<img loading="lazy" src="img/right1.png">
+							<img loading="lazy" src="img/right2.jpg">
 						</div>
 					</div>
 				</div>
@@ -159,7 +158,7 @@
 						<div class="service__main">
 							<div class="service__main-item">
 								<div class="service__item-title">
-									<img src="img/item-1.png">
+									<img loading="lazy" src="img/item-1.png">
 									<span>* Все включено</span>
 								</div>
 								<div class="service__item-text">
@@ -268,7 +267,7 @@
 							</div>
 							<div class="right-top__phone">
 								<div class="right-top__phone-line">
-									<a href="tel:88122456541"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+									<a href="tel:2456541"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
 											xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="891.024px"
 											height="891.024px" viewBox="0 0 891.024 891.024"
 											style="enable-background:new 0 0 891.024 891.024;" xml:space="preserve">
@@ -278,7 +277,7 @@
 									l38.9-38.9c19.5-19.5,19.5-51.2,0-70.7l-143.5-143.5c-19.5-19.5-51.2-19.5-70.7,0l-21.6,21.6l-92.7,92.7
 									C1,142.575-3.5,162.675,2.8,180.875z" />
 										</svg>
-										<p>8 812 245 65 41</p>
+										<p>245 65 41</p>
 									</a>
 								</div>
 								<div class="right-top__phone-line">
